# land-use-classification

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
configs/: baseline_5class.json
data/: DATASET_AUDIT.json  GROUP_AWARE_AUDIT.json
deploy/: README.md  cloud-run-service.template.yaml
docs/: API_AND_WEB_APP.md  BASELINE_AUDIT.md  COLAB_HANDOFF.md  CORRUPTION_ROBUSTNESS.md  EXPERIMENT_PROTOCOL.md  EXTERNAL_CALIBRATION_AND_OOD.md  IIT_SUBMISSION_CHECKLIST.md  IIT_SUBMISSION_CRITERIA.md  INFERENCE_FOUNDATION.md  MODEL_QUALITY_AND_EXPLAINABILITY.md  OBSERVABILITY_AND_DRIFT.md  PRODUCTION_FEEDBACK_AND_DRIFT.md  PRODUCTION_INFERENCE.md  REPRODUCTION_RUN.md  RESUME_EVIDENCE.md  TESTING.md  TRANSFER_RESULTS.md
notebooks/: Improved_Land_Use_Classification_IITK.ipynb  TerraClass_IITK_Colab_Submission.ipynb
reports/: api_load_test_2026-07-16.json  baseline_reproduction_2026-07-12.json  cloud_monitoring_deployment_2026-07-17.json  cloud_run_deployment_verification_2026-07-16.json  cloud_run_load_test_2026-07-16.json  cloud_run_observability_deployment_2026-07-17.json  cloud_run_scale_to_zero_2026-07-17.json  container_release_verification_2026-07-16.json  container_release_verification_2026-07-17.json  external_calibration_evaluation_2026-07-18.json  inference_benchmark_2026-07-15.json  model_quality_evaluation_2026-07-17.json  model_release_verification_2026-07-16.json  production_drift_readiness_2026-07-17.json  robustness_evaluation_2026-07-18.json  transfer_learning_results_2026-07-12.json
requirements/: serving.txt
scripts/: __init__.py  analyze_production_drift.py  audit_consistency.py  benchmark_inference.py  build_submission_notebook.py  download_dataset.py  download_resisc45.py  evaluate_external_calibration.py  evaluate_model_quality.py  evaluate_robustness.py  export_serving_model.py  fetch_serving_artifact.py  import_colab_results.py  load_test_api.py  prepare_baseline_data.py  prepare_group_aware_manifest.py  verify_submission_notebook.py
tests/: conftest.py  test_api.py  test_artifact_distribution.py  test_audit.py  test_benchmark_inference.py  test_colab_results.py  test_config.py  test_data.py  test_dataset_audit.py  test_deployment_contract.py  test_download_dataset.py  test_download_resisc45.py  test_drift.py  test_export_serving_model.py  test_external_calibration.py  test_grouping.py  test_inference.py  test_load_testing.py  (+10 more)
(+61 files in other folders)
