[build-system]
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[project]
name = "terraclass"
version = "0.1.0"
description = "Reproducible UC Merced land-use classification baseline and evaluation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "Pillow>=12.3",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "torchvision>=0.17"
]

[project.optional-dependencies]
dev = ["httpx2>=2.7", "pip-audit>=2.9", "pytest>=8", "ruff>=0.5"]
web = [
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30"
]

[project.scripts]
terraclass-baseline = "terraclass.training:main"
terraclass-transfer = "terraclass.transfer_training:main"
terraclass-audit = "terraclass.audit:main"
terraclass-api = "terraclass.api:main"
terraclass-drift = "terraclass.drift:main"
terraclass-model-quality = "terraclass.model_quality:main"
terraclass-external-calibration = "terraclass.external_calibration:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "notebooks/original",
  "notebooks/Improved_Land_Use_Classification_IITK.ipynb"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
